src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AAG__c</fullName>
        <description>SFDC1-2086;Product picklist value</description>
        <inlineHelpText>Account Assignment Group</inlineHelpText>
        <label>AAG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Withholding Tax</fullName>
                </value>
                <value>
                    <fullName>Credit/Deposit</fullName>
                </value>
                <value>
                    <fullName>Prod Design Deposits</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLine2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-8429: This Field is created to hold business line lookup</description>
        <inlineHelpText>Business Line</inlineHelpText>
        <label>Business Line</label>
        <referenceTo>BusinessLine__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessLineName__c</fullName>
        <description>SFDC1-8781 : This field will be used for Creating the List Views based on Business Line</description>
        <formula>BusinessLine2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Line Name associated to Product</inlineHelpText>
        <label>Business Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialPlatformDate__c</fullName>
        <label>Commercial Platform Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommercialPlatform__c</fullName>
        <inlineHelpText>Delivery Mechanism</inlineHelpText>
        <label>Commercial Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentIPOwner__c</fullName>
        <formula>LegalEntity__r.CurrentIPText__c</formula>
        <inlineHelpText>Current Intellectual Property Owner</inlineHelpText>
        <label>Current IP Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomID__c</fullName>
        <description>SFDC1-2027 Capture Custom Id on Product</description>
        <inlineHelpText>Denotes if Custom Block Product</inlineHelpText>
        <label>Custom ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryReferenceID__c</fullName>
        <inlineHelpText>Delivery Reference Number</inlineHelpText>
        <label>Delivery Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountThreshold__c</fullName>
        <description>SFDC1-4275 Threshold for maximum percent of discount that can be provided on a product</description>
        <inlineHelpText>Maximum discount (percentage) able to be applied</inlineHelpText>
        <label>Discount Threshold%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>SFDC1-6958: Global Segment field will be populated from the SAP Product Master and incorporated with the load to keep products in sync.</description>
        <inlineHelpText>Reporting Global Segment</inlineHelpText>
        <label>Global Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reporting Product Family</inlineHelpText>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductsFamily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormerIPOwner__c</fullName>
        <inlineHelpText>Former Intellectual Property Owner</inlineHelpText>
        <label>Former IP Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoverningExhibit__c</fullName>
        <description>SFDC1-7828: This field holds the Governing Exhibit value</description>
        <inlineHelpText>Governing Exhibit</inlineHelpText>
        <label>Governing Exhibit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <description>SFDC1-2028;Hierarchy is an 18 digit product field that needs to be on the product object</description>
        <inlineHelpText>Financial Hierarchy Code</inlineHelpText>
        <label>Hierarchy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProductName__c</fullName>
        <inlineHelpText>Extended Name, Internal-Facing Only</inlineHelpText>
        <label>Internal Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemCategoryGroup__c</fullName>
        <description>SFDC1-8431 Item Category Group Picklist</description>
        <inlineHelpText>Product Function in SAP</inlineHelpText>
        <label>Item Category Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled Revenue Split (Subscription)</fullName>
                </value>
                <value>
                    <fullName>Bundled Revenue Split (Transaction)</fullName>
                </value>
                <value>
                    <fullName>Bundled Subscription (Bill of Materials)</fullName>
                </value>
                <value>
                    <fullName>Bundled Transaction (Bill of Materials)</fullName>
                </value>
                <value>
                    <fullName>Credit (Deposit) Line</fullName>
                </value>
                <value>
                    <fullName>Externally Delivered</fullName>
                </value>
                <value>
                    <fullName>One Time Delivery Related</fullName>
                </value>
                <value>
                    <fullName>One Time - Non Delivery Related</fullName>
                </value>
                <value>
                    <fullName>One Time - Non Delivery Related Variable Quantity</fullName>
                </value>
                <value>
                    <fullName>Product Variable Quantity</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Reimbursables Expenses</fullName>
                </value>
                <value>
                    <fullName>Revenue When Delivered</fullName>
                </value>
                <value>
                    <fullName>Revenue When Service Date</fullName>
                </value>
                <value>
                    <fullName>Revenue When Service Performed</fullName>
                </value>
                <value>
                    <fullName>Service/Consulting (Time &amp; Milestone)</fullName>
                </value>
                <value>
                    <fullName>Shipping &amp; Handling</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Subscription Revenue Upfront</fullName>
                </value>
                <value>
                    <fullName>Subscriptions Variable Quantities</fullName>
                </value>
                <value>
                    <fullName>Summary Billing Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Summary Billing Uploads</fullName>
                </value>
                <value>
                    <fullName>Surcharges</fullName>
                </value>
                <value>
                    <fullName>Text Alternative</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Others</fullName>
                </value>
                <value>
                    <fullName>Withholding Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 : Legacy ID field for Product Object</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Reference Number</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyProductName__c</fullName>
        <description>SFDC1-9310 : This field will hold the value of legacy product name.</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Product Name</inlineHelpText>
        <label>Legacy Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Legal Owning Entity</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>LegalEntityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <description>SFDC1-173 Displays the License type of this product.</description>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>One Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoadingGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2462 Lookup field to capture loading group on product</description>
        <inlineHelpText>Loading Group Managed by Vanguard Product Management Process</inlineHelpText>
        <label>Loading Group</label>
        <referenceTo>LoadingGroup__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>LoadingGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <inlineHelpText>Format of Deliverable</inlineHelpText>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDProd__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Prd{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Prod</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5469 Lookup to Product Group table.</description>
        <inlineHelpText>Lookup to Product Group table.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductManager__c</fullName>
        <inlineHelpText>Product Manager Name</inlineHelpText>
        <label>Product Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Determines Availability/Sellability</inlineHelpText>
        <label>Product Status</label>
        <referenceTo>CrossPlantStatus__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductsCrossPlantStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfitCenters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-3837 field to establish relationship between product and it&apos;s profit center</description>
        <inlineHelpText>Reporting Profit Center</inlineHelpText>
        <label>Profit Center</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteID__c</fullName>
        <description>SFDC1-2027 Field to capture whether product has Quote ID</description>
        <inlineHelpText>Denotes if Custom Quote ID is required</inlineHelpText>
        <label>Quote ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReplacementEffectiveDate__c</fullName>
        <inlineHelpText>Replacement Effective Date</inlineHelpText>
        <label>Replacement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplacementMaterial__c</fullName>
        <inlineHelpText>Suggested Replacement Material #</inlineHelpText>
        <label>Replacement Material #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoyaltyBearingStatus__c</fullName>
        <description>SFDC1-2024;Product picklist Field</description>
        <inlineHelpText>Royalty Bearing Status</inlineHelpText>
        <label>Royalty Bearing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Royalty Bearing</fullName>
                </value>
                <value>
                    <fullName>Royalty Bearing, 1 Vendor</fullName>
                </value>
                <value>
                    <fullName>Royalty Bearing, 2/+ Vendors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubBusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 - 2170 : Lookup field to Sub Business Line Object</description>
        <inlineHelpText>Reference to Sub Business Line Record</inlineHelpText>
        <label>Sub Business Line</label>
        <referenceTo>SubBusinessLine__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5997. 
Required for Drawloop functionality to select appropriate T&amp;C&apos;s</description>
        <label>Terms and Conditions #10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions11__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5997. 
Required for Drawloop functionality to select appropriate T&amp;C&apos;s</description>
        <label>Terms and Conditions #11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5997. 
Required for Drawloop functionality to select appropriate T&amp;C&apos;s</description>
        <label>Terms and Conditions #12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFAPAC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-APAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFAftermarket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Aftermarket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFAnalytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFAustralia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Australia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFCVGandGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-CVG and Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFCanada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Canada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFContinentalTireAftermarket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WRF checkbox for POLK data on products</description>
        <label>WRF-Continental Tire Aftermarket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFJobTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WRF checkbox for POLK data on products</description>
        <label>WRF-Job Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFListandTLAS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-List and TLAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFNVPPOnline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WRF checkbox for POLK data on products</description>
        <label>WRF-NVPP Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFNewUsedRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-New&amp;Used Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFRecall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFSalesMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Sales Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFSoftwareServices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Software Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFStat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-Stat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFTIPNetSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-TIPNet System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WRFUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-932 WRF checkbox for POLK data on products</description>
        <label>WRF-UK</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AerospaceDefenseSecurity</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Aerospace,Defense &amp; Security</value>
        </filters>
        <label>Aerospace, Defense &amp; Security</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>InternalProductName__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Analytics</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Analytics</value>
        </filters>
        <label>Analytics</label>
    </listViews>
    <listViews>
        <fullName>Automotive</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <label>Automotive</label>
    </listViews>
    <listViews>
        <fullName>Chemicals</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Chemicals</value>
        </filters>
        <label>Chemicals</label>
    </listViews>
    <listViews>
        <fullName>CorporateActions</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Corporate Actions</value>
        </filters>
        <label>Corporate Actions</label>
    </listViews>
    <listViews>
        <fullName>Digital</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </filters>
        <label>Digital</label>
    </listViews>
    <listViews>
        <fullName>EconomicCountryRisk</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Economic &amp; Country Risk</value>
        </filters>
        <label>Economic &amp; Country Risk</label>
    </listViews>
    <listViews>
        <fullName>Economics</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Economics</value>
        </filters>
        <label>Economics</label>
    </listViews>
    <listViews>
        <fullName>Energy</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Energy</value>
        </filters>
        <label>Energy</label>
    </listViews>
    <listViews>
        <fullName>EnterpriseDataManagementVista</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Enterprise Data Management/Vista</value>
        </filters>
        <label>Enterprise Data Management/Vista</label>
    </listViews>
    <listViews>
        <fullName>EquitiesInfo</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Equities Info</value>
        </filters>
        <label>Equities Info</label>
    </listViews>
    <listViews>
        <fullName>EquitiesSolutions</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Equities Solutions</value>
        </filters>
        <label>Equities Solutions</label>
    </listViews>
    <listViews>
        <fullName>FinancialCapitalMarkets</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Financial &amp; Capital Markets</value>
        </filters>
        <label>Financial &amp; Capital Markets</label>
    </listViews>
    <listViews>
        <fullName>Indices</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BusinessLineName__c</field>
            <operation>equals</operation>
            <value>Indices</value>
        </filters>
        <label>Indices</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>